homework6 is done Extract fab to MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".MainActivity" android:label="Где деньги, Зина?">
+        <activity android:name=".MainActivity" android:label="@string/activity_items_list_title">
             <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
