homework7 is done add menu hide fab add ConfirmationDialog and Adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
 
         <activity
             android:name=".AddItemActivity"
-            android:label="@string/add_item_title">
+            android:label="@string/add_item_title"
+            >
 
         </activity>
 
